<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/lesspadding"
    android:orientation="vertical"
    android:background="@mipmap/background"
    tools:context="com.example.www.nfcbusinesscardlocal.CardWriteInformation">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="6">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/padding">
            <Button
                android:id="@+id/card_write_load_info"
                android:layout_width="match_parent"
                android:layout_height="@dimen/signoutbtn"
                android:padding="@dimen/padding"
                android:textStyle="bold"
                android:textSize="@dimen/padding"
                android:background="@drawable/textview_border"
                android:textColor="@color/white"
                android:drawableRight="@drawable/ic_download"
                android:text="Load My Details"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="2"
            android:padding="@dimen/lesspadding">
            <EditText android:id="@+id/card_write_name"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:hint="Full Name" />
            <EditText android:id="@+id/card_write_jobtitle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:hint="Job Title" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="@dimen/lesspadding"
            android:weightSum="2">
            <EditText android:id="@+id/card_write_companyname"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:hint="Company Name" />
            <EditText android:id="@+id/card_write_email"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:hint="Email" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="@dimen/lesspadding"
            android:layout_weight="1"
            android:weightSum="2">
            <EditText android:id="@+id/card_write_mobile"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:inputType="phone"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:hint="Mobile Number"/>
            <!--work number-->
            <EditText android:id="@+id/card_write_telephone"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:inputType="phone"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:hint="Work Telephone" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="@dimen/lesspadding"
            android:layout_weight="1">
            <EditText android:id="@+id/card_write_address"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:inputType="textPostalAddress"
                android:hint="Work Address" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="@dimen/padding">
            <Button
                android:id="@+id/btn_write"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:textStyle="bold"
                android:textSize="@dimen/fontsize"
                android:background="@drawable/textview_border"
                android:textColor="@color/white"
                android:drawableRight="@mipmap/sendingphone"
                android:text="@string/message_write_tag"/>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
