...
        android:layout_height="0dp"
        android:layout_weight="4"
        android:weightSum="4"
        android:layout_marginTop="@dimen/spacing"
        android:orientation="vertical">
        <Button
            android:id="@+id/viewcards"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="@dimen/heading"
            android:background="@drawable/textview_border"
            android:textColor="@color/white"
...
            android:textColor="@color/white"
            android:drawableRight="@mipmap/trashcan"
            android:layout_marginBottom="@dimen/spacing"
            android:onClick="openCardDeleteInformation"
            android:text="@string/deletecard"/>
        <Button
            android:id="@+id/writeinfo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="@dimen/heading"
            android:background="@drawable/textview_border"
            android:textColor="@color/white"
...
